# OctoCore

./: CMakeLists.txt  LICENSE  Makefile  README.md
OctoCore/: CMakeLists.txt  Command.h  DataTypes.h  Exception.h  FieldHash.h  State.h
OctoCore/messages/: CommandData.pb.cc  CommandData.pb.h  CommandData.proto  GenericValue.pb.cc  GenericValue.pb.h  GenericValue.proto
OctoCore/src/: Command_test.cpp  FieldHash_test.cpp  State.cpp  State_benchmark.cpp  State_test.cpp
